--- a/app/src/main/res/layout/activity_ongoing_events.xml
+++ b/app/src/main/res/layout/activity_ongoing_events.xml
@@ -8,82 +8,66 @@
     android:backgroundTint="#EDE7E7"
     tools:context=".OngoingEvents">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center">
 
-            <GridLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alignmentMode="alignMargins"
-                android:columnCount="2"
-                android:columnOrderPreserved="false">
+                android:layout_margin="30dp"
+                android:text="Raging Events 🔥"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="30sp">
+
+            </TextView>
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/fragmentcertification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnSpan="2"
+            android:layout_margin="12dp"
+            app:cardBackgroundColor="@color/black"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="193dp"
+                    android:layout_height="130dp"
+                    android:layout_gravity="bottom"
+                    android:src="@drawable/certified" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Raging Events 🔥"
-                        android:layout_margin="30dp"
-                        android:textAlignment="center"
-                        android:textSize="30sp"
-                        android:textColor="@color/black">
-
-                    </TextView>
-                </LinearLayout>
-
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/certification"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_columnSpan="2"
-                    android:layout_margin="12dp"
-                    app:cardBackgroundColor="@color/black"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="16dp">
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="2nd Year IT Certification"
+                        android:textColor="@color/white"
+                        android:textSize="30sp" />
 
-                        <ImageView
-                            android:layout_width="193dp"
-                            android:layout_height="130dp"
-                            android:layout_gravity="bottom"
-                            android:src="@drawable/certified" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center"
-                                android:text="2nd Year IT Certification"
-                                android:textColor="@color/white"
-                                android:textSize="30sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-
-            </GridLayout>
-        </LinearLayout>
-    </ScrollView>
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </FrameLayout>
