--- a/app/src/main/res/layout/activity_past_events.xml
+++ b/app/src/main/res/layout/activity_past_events.xml
@@ -7,275 +7,69 @@
     android:id="@+id/main"
     android:backgroundTint="#EDE7E7"
     tools:context=".PastEvents">
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_width="wrap_content"
+            android:layout_height="116dp"
+            android:layout_gravity="center">
 
-            <GridLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="205dp"
                 android:layout_height="wrap_content"
-                android:alignmentMode="alignMargins"
-                android:columnCount="2"
-                android:columnOrderPreserved="false">
+                android:layout_gravity="center"
+                android:layout_margin="30dp"
+                android:text="Events Ended "
+                android:textColor="@color/black"
+                android:textSize="30sp">
 
-                <!-- Ongoing Card -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/certification"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_columnSpan="2"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="16dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:background="@drawable/background"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="193dp"
-                            android:layout_height="130dp"
-                            android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center"
-                                android:text="2nd Year IT Certification"
-                                android:textColor="@color/white"
-                                android:textSize="30sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <!-- Future Card -->
-
-
-                <!-- Past Card -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/database"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_columnSpan="2"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="16dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:background="@drawable/background"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="200dp"
-                            android:layout_height="130dp"
-                            android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center"
-                                android:text="ITS - 2nd Year Database"
-                                android:textColor="@color/white"
-                                android:textSize="30sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <!-- Recognition Card -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/recognition"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_columnSpan="2"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="16dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:background="@drawable/background"
-                        android:orientation="horizontal">
-
-
-                        <ImageView
-                            android:layout_width="200dp"
-                            android:layout_height="130dp"
-                            android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center"
-                                android:text="Under Recognition"
-                                android:textColor="@color/white"
-                                android:textSize="30sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <!-- HTML Card -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/html"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_columnSpan="2"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="16dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:background="@drawable/background"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="200dp"
-                            android:layout_height="130dp"
-                            android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center"
-                                android:text="ITS 3rd Yr. HTML and CSS"
-                                android:textColor="@color/white"
-                                android:textSize="30sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <!-- Cybersecurity Card -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cybersecurity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_columnSpan="2"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="16dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:background="@drawable/background"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="200dp"
-                            android:layout_height="130dp"
-                            android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center"
-                                android:text="ITS 4th Yr. - Cybersecurity"
-                                android:textColor="@color/white"
-                                android:textSize="30sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <!-- Portfolio Card -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/portfolio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_columnSpan="2"
-                    android:layout_margin="12dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="16dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:background="@drawable/background"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="200dp"
-                            android:layout_height="130dp"
-                            android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center"
-                                android:text="IT10 - Portfolio"
-                                android:textColor="@color/white"
-                                android:textSize="30sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-            </GridLayout>
+            </TextView>
         </LinearLayout>
-    </ScrollView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/fragmentcertification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnSpan="2"
+            android:layout_margin="12dp"
+            app:cardBackgroundColor="@color/black"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="193dp"
+                    android:layout_height="130dp"
+                    android:layout_gravity="bottom"
+                    android:src="@drawable/certified" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="2nd Year IT Certification"
+                        android:textColor="@color/white"
+                        android:textSize="30sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </FrameLayout>
